--- a/translations/ui-ciim/en_US.json
+++ b/translations/ui-ciim/en_US.json
@@ -1,3 +1,10 @@
 {
-  "meta.title": "Ciim"
+  "meta.title": "Ciim",
+
+  "ui-ciim.settings.edit": "Edit",
+  "ui-ciim.settings.finish-editing": "Save",
+  "ui-ciim.settings.no-current-value": "No current value",
+
+  "ui-ciim.settingName.settingLoading": "Loading"
+
 }
