added some translations for filters

--- a/translations/ui-ciim/en.json
+++ b/translations/ui-ciim/en.json
@@ -9,5 +9,10 @@
 
   "ciimView.paneHeader.filter": "Filter",
   "ciimView.paneHeader.searchBar.search": "Search",
-  "ciimView.paneHeader.searchBar.actions": "Actions"
+  "ciimView.paneHeader.searchBar.actions": "Actions",
+
+  "ciimFilters.filter.agreements": "Agreements",
+  "ciimFilters.filter.eResources": "E-resources",
+  "ciimFilters.filter.inventoryItems": "InventoryItems",
+  "ciimFilters.filter.purchaseOrders": "Purchase orders"
 }
