Initial skeleton set up (#2)
* closable filter pane

* added some css styling and a search bar in header

* linting

* cleaned up header slightly

* added action button dropdown and cleaned up margins

* added Divider component to git

* wired in translation for search button

* separated SearchBar into its own functional component

* cleanup

* moved all header components out of CiimView

* linting

* more moving around of components

* added some proptypes

* separated filters into separate component

* added some translations for filters

* added dummy filters

* wired up filters from route to filter component

* linting

--- a/translations/ui-ciim/en.json
+++ b/translations/ui-ciim/en.json
@@ -5,6 +5,14 @@
   "settings.finish-editing": "Save",
   "settings.no-current-value": "No current value",
 
-  "settingName.settingLoading": "Loading"
+  "settingName.settingLoading": "Loading",
 
+  "ciimView.paneHeader.filter": "Filter",
+  "ciimView.paneHeader.searchBar.search": "Search",
+  "ciimView.paneHeader.searchBar.actions": "Actions",
+
+  "ciimFilters.filter.agreements": "Agreements",
+  "ciimFilters.filter.eResources": "E-resources",
+  "ciimFilters.filter.inventoryItems": "InventoryItems",
+  "ciimFilters.filter.purchaseOrders": "Purchase orders"
 }
